--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,9 +95,8 @@ body {
 
 .upload-section p {
     font-size: 1.1em;
-    margin-bottom: 1.5em;
+    padding: 25px;
 }
-
 .upload-area {
     border: 2px dashed #FF7F50;
     padding: 2em;
